# LeadFlow

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  docker-compose.yml  openapi.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: dashboard.py  health.py  leads.py  meta.py  router.py  settings.py  testing.py
backend/app/core/: config.py  exceptions.py  middleware.py
backend/app/db/: base.py  paths.py  seed.py  session.py
backend/app/models/: __init__.py  enums.py  lead.py  settings.py
backend/app/repositories/: lead_repository.py  settings_repository.py
backend/app/schemas/: analysis.py  dashboard.py  health.py  lead.py  lead_query.py  meta.py  settings.py
backend/app/services/: analysis_service.py  csv_export.py  dashboard_service.py  health_service.py  lead_service.py  meta_service.py  notification_service.py
backend/app/services/ai/: base.py  factory.py  mock_provider.py  openai_provider.py  (+1 more)
backend/migrations/: env.py
backend/migrations/versions/: c7a995c32953_initial_schema.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_analysis_api.py  test_analysis_mock.py  test_analysis_providers.py  test_cors.py  test_dashboard_api.py  test_database.py  test_health.py  test_leads_api.py  test_leads_export_api.py  test_notifications_api.py  test_notifications_service.py  test_notifications_unit.py  test_settings_api.py  test_testing_reset_api.py
(+126 files in other folders)
