[project]
name = "leadflow-backend"
version = "0.1.0"
description = "LeadFlow AI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.6",
    "pydantic[email]>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "openai>=1.50",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The lead-analysis prompt is verbatim prose; wrapping it would change the prompt.
"app/services/ai/prompt.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
